src/public/css/main.less
* {
  padding: 0;
  margin: 0;
  font-family: S;
}

a {
  text-decoration: none;
}

p , code , pre{
  word-wrap: break-word;
}

body {
  direction: rtl;
  background-color: #f8f8f8;
}

input , textarea {
  width: 90%;
  margin: 5px;
  padding: 0.6rem 0.75rem;
  font-size: 14px;
  line-height: 1.25;
  border-radius: 4px;
  color:#004c4c;
  border: 1px solid rgba(0,95,82,0.2);
  transition: 0.5s;

  &:focus {
    box-shadow: 0 0 3px #40AA54;
  }
}

.page-title {
  background: #fec901;
  padding: 10px;
  text-align: center;
  font-size: 25px;
  margin-bottom: 20px;

  span {
    margin-right: 10px;
  }

  i {
    font-size: 30px;
    vertical-align: middle;
  }
}

.green-btn {
  background-color: #40AA54;
  color: #fff;
  margin: 10px auto;
  width: 300px;
  cursor: pointer;
  font-size: 17px;

  &:hover {
    background-color: darken(#40aa54, 10%);
  }
}

.page-title {
  background: #fec901;
  padding: 10px;
  text-align: center;
  font-size: 25px;
  margin-bottom: 20px;

  span {
    margin-right: 10px;
  }

  i {
    font-size: 30px;
    vertical-align: middle;
  }
}

#content-container {
  min-height: 230px;
}

.cap {
  display: flex;
  justify-content: center;
  align-items: center;

  i {
    font-size: 15px;
    vertical-align: middle;
    cursor: pointer;

    &:hover {
      color: #555;
    }
  }
}

.fixedfooter {
    position: fixed;
    left: 0;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 60px;
    background-color: #1b1c1d;
    text-align: center;
    transition: 0.3s;
    box-shadow: 0px -15px 48px -43px rgba(0,0,0,0.77);
    border-top: solid 2px rgba(255,255,255,.08);


    a {
      padding: 5px;
      width: 50%;
      height: auto;
      display: flex;
      flex-direction: column-reverse;
      color: #fff;
      font-size: 15px;
      border-right: 1px solid rgba(255,255,255,.08);
      transition: 0.3s;

      &:hover {
        background: #2D2E2F;
      }

       i {
          font-size: 22px;
          vertical-align: middle;
          margin-bottom: 5px;
       }
    }
}

@media (min-width: 120px) and (max-width: 500px) {

.fixedfooter {
  height: 60px;

  a {
    width: 22%;
    height: 100%;
    padding: 0;
    font-size:9px;
    align-items: center;
    justify-content: center;

    &:first-child {
      border-right: none;
    }

    i {
      font-size: 17px;
    }
  }
}

}

